@startuml agent-store-final

' =========================
' CORE ENTITIES
' =========================

class AGENT {
  uuid id
  string tenantId
  string name
  string description
  uuid model_id
  uuid scaffold_id
  uuid runtime_config_id
  text additional_prompt
  boolean a2a_enabled
  string status (DRAFT, LIVE, DEPRECATED)
}

class FILTER <<embedded>> {
  string key (APP_ID)
  string value
}

class SCAFFOLD {
  uuid id
  string tenantId
  string name
  text system_prompt
  string source_product
}

class PROVIDER {
  uuid id
  string tenantId
  string name
  string description
  string type (OPENAI, OLLAMA)
  string llmUrl
  string apiKey
  string authMode (API_KEY, OAUTH)
}

class MODEL {
  uuid id
  string tenantId
  uuid provider_id
  string name
  string description
  string modelIdentifier
  string modelConfig
  string communicationMode (SYNC, ASYNC, STREAM)
}

class RUNTIME_CONFIG {
  uuid id
  string tenantId
  string type (ONECX, AWS_BEDROCK)
  uuid provider_id
  string endpoint
  string authConfig
}

class TOOL {
  uuid id
  string tenantId
  string name
  string description
  string type (MCP, HTTP, CUSTOM)
  string url
  string apiKey
  string executionPolicy (ALWAYS_ASK, NEVER_ASK)
  string authMode (API_KEY, OAUTH)
}

class SKILL {
  uuid id
  string tenantId
  string name
  string description
  string instruction
}

class AGENT_GROUP {
  uuid id
  string tenantId
  string name
  string description
  text routingInstructions
  string orchestrationMode (SUPERVISOR_ROUTED, SEQUENTIAL, PARALLEL)
  string responseStrategy (LAST, SUMMARY, SCORED)
}

class EXECUTION {
  uuid id
  string tenantId
  string executionId
  string state (PENDING, RUNNING, WAITING_TOOL, WAITING_AGENT, SUCCEEDED, FAILED, CANCELLED)
  uuid agent_id
  uuid agentIdSnapshot
  integer agentVersionSnapshot
  uuid groupId
  string groupNameSnapshot
  timestamp startTime
  timestamp endTime
  long durationMs
  integer toolCallCount
  integer agentCallCount
  string errorType
  string errorMessage
  text result
  text requestExcerpt
  boolean cancelled
}

class EXTERNAL_AGENT {
  uuid id
  string tenantId
  string name
  string description
  string discoveryUrl
  string apiKey
  string authMode (API_KEY, OAUTH)
  boolean enabled
}

' =========================
' RELATION TABLES (_RL)
' =========================

class SCAFFOLD_SKILL_RL {
  uuid scaffold_id
  uuid skill_id
}

class AGENT_TOOL_RL {
  uuid agent_id
  uuid tool_id
}

class AGENT_GROUP_RL {
  uuid agent_id
  uuid group_id
}

class EXTERNAL_AGENT_GROUP_RL {
  uuid external_agent_id
  uuid group_id
}

' =========================
' RELATIONSHIPS
' =========================

PROVIDER "1" --> "0..*" MODEL : defines
PROVIDER "1" --> "0..*" RUNTIME_CONFIG : configures

MODEL "1" --> "0..*" AGENT : configured_as
RUNTIME_CONFIG "1" --> "0..*" AGENT : runs_with
SCAFFOLD "1" --> "0..*" AGENT : base_for

AGENT "1" *-- "0..1" FILTER : has

SCAFFOLD "1" --> "0..*" SCAFFOLD_SKILL_RL : defines
SKILL "1" --> "0..*" SCAFFOLD_SKILL_RL : included_in
note right of SCAFFOLD_SKILL_RL
Scaffold skills are prompt-level optional capabilities.
They are added to the agent system prompt in deterministic name order:
"Use only when relevant".
end note

AGENT "1" --> "0..*" AGENT_TOOL_RL : uses
TOOL "1" --> "0..*" AGENT_TOOL_RL : assigned_to

AGENT "1" --> "0..*" AGENT_GROUP_RL : belongs_to
AGENT_GROUP "1" --> "0..*" AGENT_GROUP_RL : contains

EXTERNAL_AGENT "1" --> "0..*" EXTERNAL_AGENT_GROUP_RL : belongs_to
AGENT_GROUP "1" --> "0..*" EXTERNAL_AGENT_GROUP_RL : includes

AGENT "1" --> "0..*" EXECUTION : executes

note right of AGENT_GROUP
Default orchestrationMode is SUPERVISOR_ROUTED.
The supervisor routes only to relevant local or remote agents.
SEQUENTIAL and PARALLEL are explicit workflow modes.
end note

note right of PROVIDER
Provider.type is kept as the adapter routing key.
llmUrl and apiKey are provider-specific configuration.
Current adapter: OLLAMA.
Future adapters, e.g. OPENAI, plug into the same registry.
end note

@enduml
